--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,10 @@ body {
   );
 }
 
+.bg-without-navbar {
+  height: calc(100dvh - 4rem);
+}
+
 .text-larger {
   white-space: nowrap;
   overflow: hidden;
@@ -42,4 +46,8 @@ body {
 
 .background-21-container {
   @apply w-full py-4 px-4 bg-[#212121] rounded-lg;
+}
+
+input:has(-internal-autofill-selected) {
+  background-color: transparent !important;
 }
