--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,7 @@ body {
 }
 
 .background-21-container {
-  @apply w-full py-4 px-4 bg-[#212121] rounded-lg;
+  @apply w-full py-4 px-4 bg-[#212121] rounded-lg md:px-8;
 }
 
 input:has(-internal-autofill-selected) {
