--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,3 +51,17 @@ body {
 input:has(-internal-autofill-selected) {
   background-color: transparent !important;
 }
+
+.custom-horizontal-scrollbar::-webkit-scrollbar {
+  height: 0.75rem;
+}
+
+.custom-horizontal-scrollbar::-webkit-scrollbar-track {
+  background-color: #292929;
+  border-radius: 0.5rem;
+}
+
+.custom-horizontal-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #3a3a3a;
+  border-radius: 0.5rem;
+}
